wayland: Schedule repaints even on empty commits

If only frame callbacks have been committed, the compositor must still
schedule compositing.

BUG: 428499


(cherry picked from commit 72fda78cf612bd4fd82132f381e74bcad70c7be7)