toplevel.h
@@ -37,6 +37,7 @@ class SurfaceInterface;
 namespace KWin
 {
 
+class AbstractOutput;
 class ClientMachine;
 class Deleted;
 class EffectWindowImpl;
@@ -347,6 +348,7 @@ public:
     int width() const;
     int height() const;
     bool isOnScreen(int screen) const;   // true if it's at least partially there
+    bool isOnOutput(AbstractOutput *output) const;
     bool isOnActiveScreen() const;
     int screen() const; // the screen where the center is
     /**
